force-app/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand 1</fullName>
            </value>
            <value>
                <fullName>Brand 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>