force-app/main/default/objects/Account/fields/Real_Feeling__c.field-meta.xml
<CustomField>
    <fullName>Real_Feeling__c</fullName>
    <label>Real Feeling</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>