force-app/main/default/objects/Account/fields/Show_Icon__c.field-meta.xml
<CustomField>
    <fullName>Show_Icon__c</fullName>
    <formula>IMAGE( Icon__c , &apos;Icon Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Icon</label>
    <type>Text</type>
</CustomField>